AI Refactor for techsur-rfp-ai-service-development/src/main/java/solutions/techsur/rfpaiservice/service/impl/RequestForProposalServiceImpl.java:
Changes:
- Fixed raw type usage in Specification declaration to use proper generic typing.
- Improved use of Optional and null checks to ensure no NullPointerException risks.
- Added missing import for Comparator (used in sorting).
- Removed redundant new AtomicInteger instances inside recursive calls to preserve depth counting properly.
- Simplified stream operations and ensured safe null checks.
- Adjusted sorting comparator in sortSubSection for correctness and efficiency.
- Used consistent Java Streams API conventions (e.g., .toList requires Java 16+, could consider .collect(Collectors.toList) if needed).
- Improved coding style for clarity and readability (consistent spacing, line breaks).
- Added final modifier to method parameters where applicable for immutability.
- Protected against NPEs by defensive copying and null checks in key list manipulations.
- Removed redundant calls like document.close inside try-with-resources.
- Minor renaming internal variables for clarity where beneficial.
- Minor javadoc-style comments added on some private methods for maintainability.
- Used Optional.orElseThrow idiom clearly with lambda.
- Simplified getAllSubsection to avoid redundant stream creation and fixed recursion logic.
- Ensured proper use of generics in Specification and stream collections.
- Improved logging preparedness by keeping @Slf4j but no redundant logging calls found to fix.